# saiph-dev

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_env.sh
backend/application/services/: book_schema.py  user_schema.py
backend/application/use_cases/: book_use_cases.py  user_use_cases.py
backend/domain/builders/: book_builder.py  user_builder.py
backend/domain/entities/: book.py
backend/https/: books.http
backend/infrastructure/repositories/: book_repository.py  json_repository.py  user_repository.py
backend/main/config/: config.py
backend/main/controllers/: book_controller.py  user_controller.py
backend/main/middlewares/: session_middleware.py
backend/main/routes/: book_routes.py  index.py  user_routes.py
backend/main/server/: server.py
backend/tests/integration/: test_server.py
backend/tests/unitary/: test_book.py  test_user.py
frontend/: dashboard.html  index.html  login.html  package-lock.json  package.json  register.html  tailwind.config.js  tsconfig.app.json
frontend/css/: styles.css
frontend/js/: common.js  dashboard.js  login.js  register.js
frontend/src/: App.tsx  AuthScreenWithAPI.tsx  BookDashboard.tsx  UserProfile.tsx  main.tsx  withAuth.tsx
frontend/src/pages/: Home.tsx
https/: books.http  server.http
src/application/services/: book_schema.py  user_schema.py
src/application/use_cases/: book_use_cases.py  user_use_cases.py
src/domain/builders/: book_builder.py  (+1 more)
src/tests/: test_book.py  test_server.py  test_user.py
(+23 files in other folders)
