[project]
name = "Saiph"
version = "0.1.0"
license = { text = "MIT License" }

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E722", "W503"]
per-file-ignores = ["__init__.py: F401, F403"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["if __name__ == .__main__.:"]
sort = "name"
omit = ["*/__init__.py", "*/tests/*"]

[tool.pyright]
venvPath = ".venv"
pythonVersion = "3.10"
include = ["src/**/*.py"]
exclude = ["src/**/__init__.py", "tests/**/*.py"]
reportMissingTypeStubs = true
typeCheckingMode = "strict"
reportCallIssue = "none"
reportUntypedClassDecorator = "none"
reportUntypedFunctionDecorator = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
